assets/css/index.css
body, html {
  margin: 0 auto;
  width: 100%
  height: 100%;
  min-width: 960px;
  -webkit-font-smoothing: antialiased;
  -o-font-smoothing: antialiased;
  font-smoothing: antialiased;
  font-family: Lato;
}

a {
  color: inherit;
  text-decoration: none;
}

nav {
 background-color: #fff;
 border: 1px solid #dedede;
 border-radius: 4px;
 box-shadow: 0 3px 3px -1px rgba(0,0,0,0.05);
 color: #888;
 display: block;
 margin: 0px;
 overflow: hidden;
 width: 100%;
}

nav ul {
  margin: 0;
  padding: 0;
}

nav ul li {
    float: right;
    border-radius: 2px;
    list-style-type: none;
    -webkit-transition: all 0.2s;
    -moz-transition: all 0.2s;
    transition: all 0.2s;
}

nav ul li a {
    display: block;
    line-height: 50px;
    padding: 0 30px;
    text-decoration: none;
}

nav ul li:hover {
    background-color: rgb( 40, 44, 47);
}

nav ul li:hover a {
    color: white;
}

#jumbotron {
    width: 100%;
    height: 880px;
    float: left;
    background-image:
        linear-gradient(
            rgba(0,0,0,0.4),
            rgba(0,0,0,0.4)
        ),
        url('../img/hdg-jumbotron.jpg');
    background-size: cover;
    position: relative;
}

#jumbotron-welcome {
    position: absolute;
    top: 10px;
    left: 200px;
    padding: 4px 8px;
    color: white;
    margin: 0;
    border-radius: 3px;
}

#jumbotron-welcome h1 {
    font-size: 100px;
}

#jumbotron-welcome h2 {
    font-size: 30px;
}

#about-us {
    padding: 20px 20px 20px 20px;
    width: 100%;
    overflow: hidden;
}


.about-us-title {
    font-size: 45px;
    margin: 0 auto;
    width: 40%;
}

.text-muted {
    color: #888;
}


.snippet {
    width: 30%;
    float: left;
    padding: 20px;
    background-color: #f7f7f7;
    border-radius: 3px;
}

.snippet-title {
    font-weight: 700;
    font-size: 30px;
    width: 80%;
    margin: 0 auto;
    text-align: center;
}

.snippet-pic {
    width: 140px;
    height: 140px;
    margin: 0 auto;
    border-radius:50%;
    overflow: hidden;
}

.snippet-pic img {
    width: 140px;
    height: 140px;
    margin: 0 auto;
}

.snippet-text {
    margin: 0 auto;
    text-align:center;
    width: 70%;
    line-height: 1.5;
}

#mission {
    width: 97%;
    background-color: #f7f7f7;
    height: 450px;
}

#mission-pic {
    width: 35%;
    float: left;
    padding-left: calc(25% - 200px);
}

#mission-pic img{
    width: 400px;
    height: 400px;
    margin: 0 auto;
    padding-top: 25px;
    border-radius: 5px;
}

#mission-statement {
    float: left;
    width: 40%;
    line-height: 1.5;
}

#modal-container {
    width: 100%;
    height: 100%;
    position: fixed;
    z-index: 100;
    display: none;
}

#modal-overlay {
    width: 100%;
    height: 100%;
    background: rgba(0,0,0,0.5);
}

#modal-box {
    position: absolute;
    width: 500px;
    height: 500px;
    background: #333;
    top: calc(50% - 250px);
    right: calc(50% - 250px);
    z-index: 100
}

#modal-header {
    color: white;
    font-size: 1.5em;
    padding: 20px;
    font-weight: 700;
    font-size: 45px;
}

#modal-content {
    margin: 0 20px;
    width: 100%;
}

#modal-content-piece {
    width: 80%;
    color: white;
}

.button {
    width: 80px;
    height: 35px;
    color: #5485BB;
    text-align: center;
    line-height: 35px;
    margin-right: 25px;
    float: right;
    background: white;
    border-radius: 2px;
    border: 2px solid white;
    cursor: pointer;
}

.horizontal-rule {
    border-top: 2px solid white;
}

